# MSM_HOCR

./: .gitignore  README.md  allparameterssulcDRconfStage1to4  compilation instructions  config_strain_STRAIN_SPHERE_shear20_within
Licenses/: ELC_permission.txt  FastPDlicense.txt  MSM_HOCRLicense.txt  MSM_HOCRLicense.txt~
MSM_HOCR_macOSX/: estimate_metric_distortion  msm  msmapplywarp  msmresample
config/: README  optionalvars.mk
config/HCP_multimodal_alignment/: MSMAllStrainFinalconf1to1_1to3_1  MSMAllStrainFinalconf1to1_1to3_2  MSMSulcStrainFinalconf
config/NeuroImage2017_configs/: aMSM_STR_longitudinal_alignment  sMSM_PAIR_longitudinal_alignment  sMSM_PAIR_multimodal_peakmatched  sMSM_STR_longitudinal_alignment
config/basic_configs/: config_standard_MSM_strain  config_standard_MSMpair
extras/ELC1.04/: ELCdemo.cpp  ELCdemo.sln  ELCdemo.vcxproj  Image.h  readme.txt  test001.pgm  test001_020.pgm
src/DiscreteOpt/: DiscreteCostFunction.cpp  DiscreteCostFunction.h  DiscreteGroupCostFunction.cpp  DiscreteGroupCostFunction.h  DiscreteGroupModel.cpp  DiscreteGroupModel.h  DiscreteModel.cpp  Makefile  (+4 more)
src/miscmaths/: CMakeLists.txt  Makefile  Simplex.cpp  Simplex.h  SpMat.h  base2z.cc  base2z.h  bfmatrix.cpp  bfmatrix.h  bicg.h  bicgstab.h  cg.h  cgs.h  cheby.h  cspline.cc  cspline.h  f2z.cc  f2z.h  histogram.cc  histogram.h  ir.h  kernel.cc  kernel.h  kertest.cc  minimize.cc  minimize.h  miscmaths.cc  miscmaths.h  miscprob.cc  miscprob.h  nonlin.cpp  nonlin.h  optimise.cc  optimise.h  qmr.h  quick.cc  rungekutta.cc  rungekutta.h  sparse_matrix.cc  sparse_matrix.h  (+5 more)
(+62 files in other folders)
